[project]
name = "openai-service"
version = "0.1.0"
description = "MCP server for OpenAI API integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.1",
    "openai>=1.0.0",
    "click>=8.0.0",
    "pytest-asyncio",
    "tzdata>=2024.2",
    "pillow>=10.0.0",  # 用于图像处理
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
openai-service = "mcp_server_openai.server:main"