[project]
name = "mcp-openai"
version = "0.4.0"
description = "MCP server for OpenAI API integration"
requires-python = ">=3.10"
dependencies = [
    "mcp @ file:///Users/donghao/Documents/mcp/mcp-python-sdk",
    "openai>=1.0.0",
    "click>=8.0.0",
    "pytest-asyncio",
    "tzdata>=2024.2",
    "pillow>=10.0.0",  # 用于图像处理
    "aiohttp>=3.9.0",  # 用于下载图片
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-openai = "mcp_server_openai.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_openai"]

[tool.hatch.metadata]
allow-direct-references = true